package eu.tn.chaoscompiler.tdstool.variable;

public class ArrayValue extends Value {

    public ArrayValue(Type type, String id) {
        super(type, id);
    }
}
