@startuml

package tds {

  class TDScontroller {
    +Type getTypeOfId(String id)
    +Value getVariableOfId(String id)

    +Variable findType(String id)
    +Bool existsType(String id)
    +Bool existsLocalType(String id)

    +Value findVari(String id)
    +Bool existsVari(String id)
    +Bool existsLocalVari(String id)

    +void add(Variable var)

    +void down()
    +void up()
  }

  interface TDS {
    +HashMap<String, Type> getHmType()
    +HashMap<String, Type> getHmVari()

    +Type findType(String id)
    +Bool existsType(String id)

    +Value findVari(String id)
    +Bool existsVari(String id)

    +void add(Variable var)
  }

  class TDSroot implements TDS {
    +Type findType(String id)
    +Bool existsType(String id)

    +Value findVari(String id)
    +Bool existsVari(String id)
    
    +void add(Variable var)
  }

  class TDSlocal extends TDSroot {
    +TDS getFather()
  }
}

package variable {

  Interface Variable {
    +Type getType()
    +String getId()
    +Int getToken()
  }

  class Type implements Variable {
    #String id
    #Int token

    +Type getType() {return type;}
    +String getId()
    +Int getToken()
  }

  class RecordType extends Type {
    +void addAttribut(Value v)
    +Value getAttribut()
  }

  class ArrayType extends Type {
    +Type elementsType
  }

  class TypeRename extends Type {
    +Type origType
  }

  class FunctionType extends Type {
    +List<Type> inTypes
    +Type outType
    +void addIn()
  }

  class Value implements Variable {
    #Type type
    #String id
    #Int token

    +Type getType()
    +String getId()
    +Int getToken()
  }

  class ArrayValue extends Value {
  }
}

TDScontroller *--"1" TDS
TDSlocal *--"1" TDS
TDSroot *--"..*[HashMap]" Type
TDSroot *--"..* [HashMap]" Value
Value *--"1" Type
RecordType *--"0..*" Value
ArrayType *--"1" Type
TypeRename *--"1" Type
FunctionType *--"0..*" Type
FunctionType *--"1" Type

TDScontroller -u[hidden]-> Variable
@enduml